--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -4,87 +4,106 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}hacksoft{% endblock title %}</title>
+    <title>HackSoft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    {% block css %}
+        <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     <!-- Latest compiled and minified Bootstrap 4 Alpha 3 CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,700' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
     <!-- Your stuff: Third-party CSS libraries go here -->
 
     <!-- This file stores project-specific CSS -->
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
-
-    {% endblock %}
-
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
+    <link href="{% static 'css/icons.css' %}" rel="stylesheet">
   </head>
 
   <body>
 
-    <div class="m-b-1">
-      <nav class="navbar navbar-dark navbar-static-top bg-inverse">
-        <div class="container">
-          <a class="navbar-brand" href="/">hacksoft</a>
-          <button type="button" class="navbar-toggler hidden-sm-up pull-xs-right" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
-            &#9776;
-          </button>
+  <div class="page-wrapper">
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
-              </li>
-            </ul>
-          </div>
+    <div class="header">
+      <div class="header-container float-container">
+
+        <div class="logo">
+          <a href="/">
+            <img src="{% static 'images/logo.png' %}" alt="HackSoft logo">
+          </a>
         </div>
-      </nav>
+
+        <nav class="nav-menu float-container">
+          <label for="drop" class="toggle"><i class="fa fa-bars" aria-hidden="true"></i>
+          </label>
+          <input type="checkbox" id="drop" />
+          <ul class="menu-main menu">
+            <li class="child selected">
+              <a href="/">Home</a>
+            </li>
+            <li class="child sibling">
+              <a href="/how-we-work/">How we work</a>
+            </li>
+            <li class="child sibling">
+              <a href="/technologies-we-use/">Technologies we use</a>
+            </li>
+            <li class="child sibling">
+              <a href="/our-team/">Our Team</a>
+            </li>
+          </ul>
+        </nav>
+
+      </div>
     </div>
 
-    <div class="container">
+    {% block content %}
+    {% endblock content %}
+    <div class="footer background">
 
-      {% if messages %}
-          {% for message in messages %}
-              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
-          {% endfor %}
-      {% endif %}
+      <div class="section book-a-meeting">
+        <a class="book-a-meeting-button">Book a meeting</a>
+      </div>
 
-      {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
-      {% endblock content %}
+      <div class="footer-text">
+        <div class="text-box">
+          Some text here............
+        </div>
+      </div>
 
-    </div> <!-- /container -->
+      <div class="social-buttons">
+        <a href="#" class="social-button facebook">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a href="#" class="social-button github">
+          <i class="fa fa-github"></i>
+        </a>
+        <a href="#" class="social-button twitter">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="#" class="social-button linkedin">
+          <i class="fa fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
 
-    {% block modal %}{% endblock modal %}
+  </div>
+</body>
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    {% block javascript %}
-      <!-- Required by Bootstrap v4 Alpha 3 -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
+{% block javascript %}
+<!-- Required by Bootstrap v4 Alpha 3 -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
 
-      <!-- Your stuff: Third-party javascript libraries go here -->
+<!-- Your stuff: Third-party javascript libraries go here -->
 
-      <!-- place project specific Javascript in this file -->
+<!-- place project specific Javascript in this file -->
 
-      <script src="{% static 'js/project.js' %}"></script>
+<script src="{% static 'js/project.js' %}"></script>
 
 
-    {% endblock javascript %}
-  </body>
+{% endblock javascript %}
 </html>
-
