--- a/hacksoft/templates/website/how_we_work_page.html
+++ b/hacksoft/templates/website/how_we_work_page.html
@@ -5,7 +5,7 @@
   {% image page.header_image max-1366x1366 as header_image %}
   <div class="new static-header dimmed-image" style="background-image: url({{header_image.url}})">
     <div class="new heading">
-      <p>HOW WE WORK</p>
+      <p>{{page.header_text}}</p>
     </div>
     <div class="new header-image-background dimmed-image-background">
       <div class="new overlay"></div>
