--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -5,6 +5,9 @@
 <div class="new homepage-header dimmed-image">
   <div class="new header-image-background dimmed-image-background">
     <div class="new overlay"></div>
+    <iframe id="ytplayer" type="text/html" width="640" height="390"
+            src="https://www.youtube.com/embed/zxMt_5l9Nkc?autoplay=1&loop=1&controls=0&playlist=zxMt_5l9Nkc&fs=0&modestbranding=0&rel=0&showinfo=0"
+            frameborder="0"></iframe>
   </div>
   <div class="new header-image-frame">
     <div class="new header-main-text">
@@ -21,122 +24,119 @@
   </div>
 </div>
 
-<div class="new header-overlay-background">
-</div>
+<div class="page-content">
+  <div class="content-wrapper" >
 
+    <div class="section home-page-lead">
+      <h1 class="lead-text">{{ page.intro_h1 }}</h1>
+      <h2 class="lead-subtext">{{ page.intro_h2 }}</h2>
 
-
-<div class="content-wrapper" >
-
-  <div class="section home-page-lead">
-    <h1 class="lead-text">{{ page.intro_h1 }}</h1>
-    <h2 class="lead-subtext">{{ page.intro_h2 }}</h2>
-
-    <div class="doodle align-center">
-      {% image page.intro_image max-250x250  %}
-    </div>
-  </div>
-
-  <div class="section">
-
-    <div class="section-heading">
-      <div>
-        <p>{{ page.how_we_work_title }}</p>
+      <div class="doodle align-center">
+        {% image page.intro_image original  %}
       </div>
     </div>
 
-    <div class="section-content-row align-center our-team-text">
-      {{ page.how_we_work_center|richtext }}
-    </div>
+    <div class="section">
 
-    <div class="section-content">
-      <div class="section-content-row responsive-underlined float-container">
-        <div class="left-side">
-          {{ page.how_we_work_left|richtext }}
-        </div>
-        <div class="right-side">
-          {{ page.how_we_work_right|richtext }}
+      <div class="section-heading">
+        <div>
+          <p>{{ page.how_we_work_title }}</p>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div class="section technologies-we-use">
-    <div class="section-heading">
-      <div>
-  	<p>{{ page.technologies_we_use_title }}</p>
-      </div>
-    </div>
-    <div class="section-content-row">
-      <div class="section-content-row align-center panda-pic">
-        {% image page.technologies_we_use_image max-200x200%}
-      </div>
-      <div class="section-content-row align-center primary-focus-text technologies-text">
-        {{ page.technologies_we_use_center|richtext }}
-      </div>
-      <div class="section-content-row align-center technologies-logos">
-        {% for relation in page.technologies_placement.all %}
-        {% image relation.technology.logo fill-200x200 as tech_logo %}
-        <img src="{{tech_logo.url}}" class="filter_image" />
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-
-  <div class="section our-team">
-    <div class="section-heading">
-      <div>
-        <p>{{ page.our_team_title }}</p>
-      </div>
-    </div>
-    <div class="section-content">
       <div class="section-content-row align-center our-team-text">
-        {{ page.our_team_center|richtext }}
+        {{ page.how_we_work_center|richtext }}
       </div>
-      <div class="section-content-row align-center our-team-images float-container">
 
-        {% for relation in page.teammate_placement.all %}
-        <div class="team-member">
-          {% image relation.teammate.initial_photo fill-170x170 class="filer_image" %}
-          <div class="name">
-            <p>{{ relation.teammate.name }}</p>
+      <div class="section-content">
+        <div class="section-content-row responsive-underlined float-container">
+          <div class="left-side">
+            {{ page.how_we_work_left|richtext }}
+          </div>
+          <div class="right-side">
+            {{ page.how_we_work_right|richtext }}
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section technologies-we-use">
+      <div class="section-heading">
+        <div>
+  	  <p>{{ page.technologies_we_use_title }}</p>
+        </div>
+      </div>
+      <div class="section-content-row">
+        <div class="section-content-row align-center panda-pic">
+          {% image page.technologies_we_use_image original %}
+        </div>
+        <div class="section-content-row align-center primary-focus-text technologies-text">
+          {{ page.technologies_we_use_center|richtext }}
+        </div>
+        <div class="section-content-row align-center technologies-logos">
+          {% for relation in page.technologies_placement.all %}
+          {% image relation.technology.logo fill-200x200 as tech_logo %}
+          <img src="{{tech_logo.url}}" class="filter_image" />
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+    <div class="section our-team">
+      <div class="section-heading">
+        <div>
+          <p>{{ page.our_team_title }}</p>
+        </div>
+      </div>
+      <div class="section-content">
+        <div class="section-content-row align-center our-team-text">
+          {{ page.our_team_center|richtext }}
+        </div>
+        <div class="section-content-row align-center our-team-images float-container">
+
+          {% for relation in page.teammate_placement.all %}
+          <div class="team-member">
+            {% image relation.teammate.initial_photo fill-170x170 class="filer_image" %}
+            <div class="name">
+              <p>{{ relation.teammate.name }}</p>
+            </div>
+          </div>
+          {% endfor %}
+
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="section-heading">
+        <div>
+  	  <p>{{ page.portfolio_title }}</p>
+        </div>
+      </div>
+      <div class="section-content">
+        <div class="section-content-row align-center">
+          {% image page.portfolio_image max-200x200 class="filter_image" %}
+        </div>
+        <div class="section-content-row align-center our-team-text">
+  	  <div>
+            {{ page.portfolio_center|richtext }}
+          </div>
+        </div>
+
+        {% for relation in page.projects_placement.all %}
+        {% image relation.project.background_image fill-1090x301 as bg_image %}
+        <div style="background-image: url({{bg_image.url}})" class="section-content-row  float-container  portfolio-landing">
+          <div class="new portfolio-overlay"></div>
+          <div class="larger-part">
+            {{ relation.project.description|richtext }}
+          </div>
+          <div class="smaller-part">
+            {% image relation.project.logo height-200 as project_logo %}
+            <img src="{{ project_logo.url }}" class="filter_image" />
           </div>
         </div>
         {% endfor %}
-
       </div>
-    </div>
-  </div>
-
-  <div class="section">
-    <div class="section-heading">
-      <div>
-  	<p>{{ page.portfolio_title }}</p>
-      </div>
-    </div>
-    <div class="section-content">
-      <div class="section-content-row align-center">
-        {% image page.portfolio_image max-200x200 class="filter_image" %}
-      </div>
-      <div class="section-content-row align-center our-team-text">
-  	<div>
-          {{ page.portfolio_center|richtext }}
-        </div>
-      </div>
-
-      {% for relation in page.projects_placement.all %}
-        {% image relation.project.background_image fill-1090x301 as bg_image %}
-      <div style="background-image: url({{bg_image.url}})" class="section-content-row  float-container  portfolio-landing">
-        <div class="new portfolio-overlay"></div>
-        <div class="larger-part">
-          {{ relation.project.description|richtext }}
-        </div>
-        <div class="smaller-part">
-          {% image relation.project.logo height-200 as project_logo %}
-          <img src="{{ project_logo.url }}" class="filter_image" />
-        </div>
-      </div>
-      {% endfor %}
     </div>
   </div>
 </div>
