--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -32,7 +32,7 @@ a {
     position: absolute;
     background: url(/static/images/home-page-header.jpg) center no-repeat;
     background-size: cover; }
-    .dimmed-image .dimmed-image-background object {
+    .dimmed-image .dimmed-image-background #ytplayer {
       visibility: visible;
       position: absolute;
       width: 100vw;
@@ -48,13 +48,15 @@ a {
     text-align: center;
     position: absolute;
     bottom: 4vh;
-    width: 100%;
-    cursor: pointer; }
+    width: 100%; }
+    .dimmed-image .scroll-down-arrow img {
+      cursor: pointer; }
 
 .technologies-we-use-heading .dimmed-image {
   height: 50vh;
   background-size: cover;
-  background-position-y: 25%; }
+  background-position-y: 25%;
+  background-position-x: 50%; }
 .technologies-we-use-heading .scroll-down-arrow {
   bottom: 54vh; }
 .technologies-we-use-heading .heading {
@@ -79,7 +81,6 @@ a {
     top: 38vh; }
 
 .universal-header .header-image-background, .homepage-header .header-image-background, .static-header .header-image-background {
-  z-index: -2;
   position: fixed; }
   .universal-header .header-image-background .overlay, .homepage-header .header-image-background .overlay, .static-header .header-image-background .overlay {
     z-index: -1; }
@@ -90,13 +91,12 @@ a {
   left: 50%;
   top: 50%;
   margin-left: -33vw;
-  margin-top: -45vh;
-  z-index: -1; }
+  margin-top: -45vh; }
   .universal-header .header-image-frame .header-main-text, .homepage-header .header-image-frame .header-main-text, .static-header .header-image-frame .header-main-text {
     text-align: center;
     color: #eee;
     margin-top: 20vh;
-    font-size: 25px; }
+    font-size: 4vmin; }
     @media screen and (max-width: 450px) {
       .universal-header .header-image-frame .header-main-text, .homepage-header .header-image-frame .header-main-text, .static-header .header-image-frame .header-main-text {
         font-size: 16px; } }
@@ -263,10 +263,15 @@ a {
 .mb50 {
   margin-bottom: 50px !important; }
 
+.page-content {
+  background-color: white;
+  position: relative; }
+
 .content-wrapper {
   max-width: 1100px;
   margin: auto;
-  position: relative; }
+  position: relative;
+  padding-bottom: 50px; }
   @media screen and (max-width: 1100px) {
     .content-wrapper {
       max-width: 90vw;
@@ -410,10 +415,9 @@ a {
             height: 270px;
             max-width: 90vw; }
             .content-wrapper .section .section-content .section-content-row .smaller-part.member-picture img {
-              max-width: 80%;
+              max-height: 100%;
               position: absolute;
-              left: 0;
-              height: 255px; }
+              left: 0; }
               .content-wrapper .section .section-content .section-content-row .smaller-part.member-picture img:hover {
                 opacity: 0;
                 transition: opacity .4s ease-out;
@@ -535,8 +539,8 @@ a {
 
 .our-team-images .team-member {
   width: 220px;
-  float: left;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  display: inline-block; }
   @media screen and (max-width: 425px) {
     .our-team-images .team-member {
       width: 50%; } }
@@ -555,7 +559,9 @@ a {
 
 .footer {
   min-height: 270px;
-  background-color: #505050; }
+  background-color: #505050;
+  position: relative;
+  overflow: hidden; }
   .footer .book-a-meeting {
     padding-top: 30px;
     text-align: center;
